<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#F7CF9C"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="202dp"
        android:layout_height="187dp"
        app:srcCompat="@mipmap/logo" />

    <TextView
        android:layout_width="220dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:fontFamily="@font/abraham"
        android:text="@string/שלום"
        android:textColor="#000000"
        android:textSize="48sp" />

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:textSize="20sp"
    android:textStyle="bold"
    android:gravity="center"
        android:textColor="#000000"
    android:layout_marginBottom="15dp"
    />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:textColorHint="#000000"
        android:layout_height="wrap_content" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:textColorHint="#000000"
        android:layout_height="wrap_content" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/אישור"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/registerNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_to_register"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20sp"
        />

</LinearLayout>